--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1126,7 +1126,7 @@ label {
 .ArtworkInfo-wrapper {
   width: 100%;
   max-width: 600px;
-  padding: 40px 0px 20px 20px;
+  padding: 10px 0px 20px 20px;
 }
 
 .ArtworkInfo-preview-container {
@@ -1330,6 +1330,7 @@ label {
   background-color: silver;
   opacity: 0.5;
   cursor: pointer;
+  min-width: 20px;
   max-width: 20px;
 }
 
@@ -1342,16 +1343,22 @@ label {
           justify-content: center;
   position: absolute;
   z-index: 9999;
-  overflow-x: auto;
-  margin-top: 9px;
   width: 100%;
-  overflow-x: auto;
+  bottom: 0;
+  border: 1px solid black;
+  background-color: white;
+  height: 40px;
 }
 
 .previewBubble-wrapper {
+  padding: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: calc(100% - 80px);
+  position: absolute;
+  left: 0;
+  overflow-x: auto;
 }
 
 .previewBubble-filled {
@@ -1654,6 +1661,23 @@ label {
     position: absolute;
     bottom: 0;
   }
+  .TagsMenu-hamburger {
+    height: 40px;
+    width: 80px;
+    background-color: black;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    right: 0;
+  }
   .enlarge-down {
     -webkit-transform: translateY(0) !important;
             transform: translateY(0) !important;
@@ -1667,8 +1691,8 @@ label {
   .frontEndIndex-container {
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
-    -ms-grid-rows: auto 1fr 45px;
-        grid-template-rows: auto 1fr 45px;
+    -ms-grid-rows: auto 1fr 40px;
+        grid-template-rows: auto 1fr 40px;
   }
   .TagsMenu-container {
     -ms-grid-row: 1;
@@ -1725,6 +1749,7 @@ label {
     border-left: 1px solid;
     border-right: 1px solid;
     border-top: 1px solid;
+    border-bottom: 0;
   }
   .imageSelect-container {
     -ms-grid-column: 1;
@@ -1863,9 +1888,11 @@ label {
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
     overflow: visible;
+    bottom: -91px;
+    border-top: 1px solid black;
   }
   .ArtworkInfo-toggleTags {
-    bottom: 1px;
+    bottom: 0px !important;
   }
   .imageSelect-FilePreview {
     -ms-flex-item-align: start;
@@ -1920,17 +1947,14 @@ label {
   .ArtworkInfo-container_seealso {
     height: 95px;
   }
-  .ArtworkInfo-container {
-    border-top: none;
-  }
   .side-scroll .ImagesPreview--imageContainer__empty {
     width: 0px !important;
     height: 100% !important;
   }
   .info-up {
     opacity: 1;
-    -webkit-transform: translateY(1px);
-            transform: translateY(1px);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     border-top: 1px solid black;
   }
   .show {
