--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -848,7 +848,7 @@ font-family: 'Times New Roman', Times, serif;
     width: 100%;
     max-width: 600px;
     // padding: 1vw 0;
-    padding: 40px 0px 20px 20px;
+    padding: 10px 0px 20px 20px;
 }
 .ArtworkInfo-preview-container{
     height: 75px;
@@ -998,6 +998,7 @@ font-family: 'Times New Roman', Times, serif;
     background-color: rgb(192, 192, 192);
     opacity: 0.5;
     cursor: pointer;
+    min-width: 20px;
     max-width: 20px;
 }
 .previewBubble-container{
@@ -1006,13 +1007,19 @@ font-family: 'Times New Roman', Times, serif;
     position: absolute;
     // bottom: 2px;
     z-index: 9999;
-    overflow-x: auto;
-    margin-top: 9px;
     width: 100%;
-    overflow-x: auto;
+    bottom: 0;
+    border: 1px solid black;
+    background-color: white;
+    height: 40px;
 }
 .previewBubble-wrapper{
+    padding: 5px 0;
     display: flex;
+    width: calc(100% - 80px);
+    position: absolute;
+    left: 0;
+    overflow-x: auto;
 }
 .previewBubble-filled{
     background-color: pink;
@@ -1253,6 +1260,17 @@ font-family: 'Times New Roman', Times, serif;
         position: absolute;
         bottom: 0;
     }
+    .TagsMenu-hamburger{
+        height: 40px;
+        width: 80px;
+        background-color: black;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        right: 0;
+    }
     .enlarge-down{
         transform: translateY(0) !important;
     }
@@ -1264,7 +1282,7 @@ font-family: 'Times New Roman', Times, serif;
     }
     .frontEndIndex-container{
         grid-template-columns: 100%;
-        grid-template-rows: auto 1fr 45px;
+        grid-template-rows: auto 1fr 40px;
     }
     .TagsMenu-container{
         grid-row-start: 1;
@@ -1308,6 +1326,7 @@ font-family: 'Times New Roman', Times, serif;
         border-left: 1px solid;
         border-right: 1px solid;
         border-top: 1px solid;
+        border-bottom: 0;
     }
     .imageSelect-container{
         grid-column-start: 1;
@@ -1421,9 +1440,11 @@ font-family: 'Times New Roman', Times, serif;
         bottom: -90px;
         transform: translateY(100%);
         overflow: visible;
+        bottom: -91px;
+        border-top: 1px solid black;
     }
     .ArtworkInfo-toggleTags{
-        bottom: 1px;
+        bottom: 0px !important;
     }
 
     // .imageSelect-FilePreview{
@@ -1475,16 +1496,16 @@ font-family: 'Times New Roman', Times, serif;
     .ArtworkInfo-container_seealso{
         height: 95px;
     }
-    .ArtworkInfo-container{
-        border-top: none;
-    }
+    // .ArtworkInfo-container{
+    //     border-top: none;
+    // }
     .side-scroll .ImagesPreview--imageContainer__empty{
         width: 0px !important;
         height: 100% !important;
     }
     .info-up{
         opacity: 1;
-        transform: translateY(1px);
+        transform: translateY(0);
         border-top: 1px solid black;
     }
     .show{
