--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -525,23 +525,15 @@ font-family: 'Times New Roman', Times, serif;
 .imageSelect-container{
     height: 100%;
     width: 100%;
-    overflow-y: auto;
     overflow-x: hidden;
     background-color: $background-color;
     overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
     position: absolute;
-    // padding: 4px;
-    // border-left: $border-dark;
-    // border-right: $border-light;
-    // border-bottom: $border-light;
-    // border-top: $border-dark;
-    // border-right: $border-dark;
     border-left: $border-dark;
-    transition: 0.2s transform;
+    transition: 0.2s transform, 0.2s width;
     transform: translateX(0);
-
 }
 // .imageSelect-slide{
 // transform: translateX(250px);
@@ -602,6 +594,7 @@ font-family: 'Times New Roman', Times, serif;
     top: 0;
     text-indent: -100%;
     overflow: hidden;
+    flex: 1 1 90px;
 }
 .ImagesPreview--imageContainer__empty{
     // border: 2px solid red;
@@ -679,7 +672,6 @@ font-family: 'Times New Roman', Times, serif;
     // width: 1px;
 }
 .foreground-transition{
-    // transition: 0.4s all;
     transition: height 0.4s, width 0.4s, opacity 0.7s;
 }
 
@@ -1085,6 +1077,10 @@ font-family: 'Times New Roman', Times, serif;
 .controls-exitButton{
     border-left: 1px solid;
 }
+.images-grid{
+    display: grid;
+    grid-template-columns: 1fr max-content;
+}
 
 //*****************************************
 .TagsMenu-checkbox{
@@ -1143,15 +1139,12 @@ font-family: 'Times New Roman', Times, serif;
     bottom: 0;
     overflow: visible;
     background-color: white;
-    // border-top: 1px solid;
-    border-bottom: 1px solid;
     opacity: 0;
 }
 .TagsMenu-listItems-container{
     width: 100%;
     position: absolute;
     border-bottom: 1px solid black;
-    border-top: 1px solid black;
     bottom: 0;
 }
 .TagsMenu-listitem{
@@ -1162,7 +1155,6 @@ font-family: 'Times New Roman', Times, serif;
     bottom: 0;
     padding: 4px 40px;  
     border-bottom: 1px solid;
-    border-top: 1px solid;
     opacity: 0;
 }
 #TagsMenu-listitems-container{
@@ -1188,6 +1180,7 @@ font-family: 'Times New Roman', Times, serif;
 .scroll-down{
     transform: translateY(100%);
     opacity: 1 !important;
+    border-top: none;
 }
 .scroll-down-listitem{
     // height: auto;
@@ -1219,6 +1212,7 @@ font-family: 'Times New Roman', Times, serif;
     flex-wrap: wrap;
     width: 100%;
     background-color: white;
+    border-bottom: 1px solid black;
 }
 .subcategories{
     z-index: 8;
@@ -1253,7 +1247,12 @@ font-family: 'Times New Roman', Times, serif;
     width: 100%;
     margin-left: 6vw !important;
 }
-
+.fade-out{
+    opacity: 0 !important;
+}
+.enlarge-scroll-left{
+    transform: translateX(0);
+}
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
     body{
@@ -1366,7 +1365,8 @@ font-family: 'Times New Roman', Times, serif;
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
-        width: 100% !important;
+        width: 100%;
+        height: 100%;
         max-height: none;
         display: flex;
         justify-content: center;
@@ -1489,6 +1489,7 @@ font-family: 'Times New Roman', Times, serif;
     .ImagesPreview--imageContainer{
         width: 50%;
         min-height: 90px;
+        flex: 1 1 50%;
         // border: 1px solid red;
     }
     .ImagesPreview--imageContainer__empty{
@@ -1520,7 +1521,7 @@ font-family: 'Times New Roman', Times, serif;
     }
 
     .side-scroll img{
-        max-height: 90px;
+        height: 90px;
     }
 
     // .side-scroll-min{
@@ -1533,6 +1534,13 @@ font-family: 'Times New Roman', Times, serif;
     .hide-imageSelect{
         transform: translateY(100%)
     }
+    .enlarge-scroll-down{
+        transform: translateY(0px);
+    }
+    .foreground-transition{
+        transition: opacity 0.7s;
+    }
+    
   }
 
 //   *{transition: 0s all !important;}
