--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   white-space: normal;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 body {
@@ -474,6 +478,7 @@ label {
   overflow-y: auto;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
+  overflow-x: hidden;
 }
 
 .TagsMenu-checkbox {
@@ -564,19 +569,31 @@ label {
 }
 
 .tagsMenu-listItem:hover {
-  background-color: #ffe0ef;
+  background-color: lime;
 }
 
 .TagsMenu-Card-Title:hover {
-  background-color: #ffe0ef;
+  background-color: lime;
+}
+
+.about-container:hover {
+  background-color: lime;
+}
+
+.tagsMenu-listItem:focus {
+  background-color: lime;
+}
+
+.TagsMenu-Card-Title:focus {
+  background-color: lime;
+}
+
+.about-container:focus {
+  background-color: lime;
 }
 
 .checkbox-selected {
   background-color: #e3e3e3;
-}
-
-.about-container:hover {
-  background-color: #ffe0ef;
 }
 
 .tagsMenu-Button_category * {
@@ -1329,11 +1346,15 @@ label {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 15px;
           flex: 1 1 15px;
-  background-color: silver;
-  opacity: 0.5;
   cursor: pointer;
   min-width: 20px;
   max-width: 20px;
+  opacity: 0.8;
+  border: 2px solid black;
+}
+
+.previewBubble-filled {
+  background-color: lime;
 }
 
 .previewBubble-container {
@@ -1361,10 +1382,6 @@ label {
   position: absolute;
   left: 0;
   overflow-x: auto;
-}
-
-.previewBubble-filled {
-  background-color: pink;
 }
 
 .clickable {
@@ -1808,7 +1825,7 @@ label {
     -ms-grid-row: 1;
         grid-row-start: 1;
     grid-row-end: 2;
-    width: 100%;
+    width: 100% !important;
     height: 100%;
     max-height: none;
     display: -webkit-box;
