--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -2,6 +2,7 @@
     margin:0;
     padding: 0;
     white-space: normal;
+    user-select: none;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -350,6 +351,7 @@ $border-main-color: #bbb;
     border-bottom: $border-light;
     overflow-y: auto;
     transition: 0.2s all;
+    overflow-x: hidden;
 }
 .TagsMenu-checkbox{
     position: absolute;
@@ -419,17 +421,25 @@ $border-main-color: #bbb;
     margin: 4px;
 }
 .tagsMenu-listItem:hover{
-    // border-bottom: 1px solid black;
-    background-color: #ffe0ef;
+    background-color: lime;
 }
 .TagsMenu-Card-Title:hover{
-    background-color: #ffe0ef;
+    background-color: lime;
+}
+.about-container:hover{
+    background-color: lime;
+}
+.tagsMenu-listItem:focus{
+    background-color: lime;
+}
+.TagsMenu-Card-Title:focus{
+    background-color: lime;
+}
+.about-container:focus{
+    background-color: lime;
 }
 .checkbox-selected{
     background-color: #e3e3e3;
-}
-.about-container:hover{
-    background-color: #ffe0ef;
 }
 .tagsMenu-Button_category *{
 font-size: 26px !important;
@@ -982,16 +992,18 @@ font-family: 'Times New Roman', Times, serif;
 .previewBubble{
     height: 20px;
     width: 20px;
-    // height: 10px;
-    // width: 10px;
     border-radius: 999px;
     margin: 5px;
     flex: 1 1 15px;
-    background-color: rgb(192, 192, 192);
-    opacity: 0.5;
     cursor: pointer;
     min-width: 20px;
     max-width: 20px;
+    opacity: 0.8;
+    // background-color: rgb(192, 192, 192);
+    border: 2px solid black;
+}
+.previewBubble-filled{
+    background-color: lime;
 }
 .previewBubble-container{
     display: flex;
@@ -1012,9 +1024,6 @@ font-family: 'Times New Roman', Times, serif;
     position: absolute;
     left: 0;
     overflow-x: auto;
-}
-.previewBubble-filled{
-    background-color: pink;
 }
 .clickable{
     cursor: pointer;
@@ -1365,7 +1374,7 @@ font-family: 'Times New Roman', Times, serif;
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
-        width: 100%;
+        width: 100% !important;
         height: 100%;
         max-height: none;
         display: flex;
