--- a/client/src/css/components/imageInfo.css
+++ b/client/src/css/components/imageInfo.css
@@ -21,6 +21,7 @@
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 5px 0;
 }
 
 .imageInfo--fileUpload {
@@ -52,11 +53,18 @@
 }
 
 .themes-list {
-  position: relative;
-  width: 200px;
   border-bottom: 1px solid;
-  height: 22px;
   background-color: rgba(0, 0, 0, 0.055);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 19px;
 }
 
 .themes-list--selected {
@@ -66,17 +74,8 @@
 }
 
 .themes-span {
-  position: absolute;
-  left: 10px;
-  height: 30px;
-  overflow: hidden;
-  width: 150px;
   font-size: 12px;
-}
-
-.themes-checkbox {
-  position: absolute;
-  right: 0;
+  margin-left: 12px;
 }
 
 .themeSelector > ul {
@@ -106,5 +105,29 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.displayTrigger-wrapper {
+  background-color: rgba(0, 0, 0, 0.055);
+  padding: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.displayTrigger-title {
+  text-transform: uppercase;
+  font-weight: 600;
+  border-bottom: 2px solid black;
+  width: 100%;
+}
+
+.displayTrigger-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 /*# sourceMappingURL=imageInfo.css.map */
