--- a/client/src/css/components/imageInfo.scss
+++ b/client/src/css/components/imageInfo.scss
@@ -11,6 +11,7 @@
     position: relative;
     align-items: center;
     flex-wrap: wrap;
+    padding: 5px 0;
 }
 .imageInfo--fileUpload{
     width: 85px;
@@ -38,27 +39,32 @@
     display: initial;
 }
 .themes-list{
-    position: relative;
-    width: 200px;
+    // position: relative;
+    // width: 200px;
     border-bottom: 1px solid;
-    height: 22px;
+    // height: 22px;
     background-color: rgba(0,0,0,.055);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 19px;
 }
 .themes-list--selected{
     background-color: #c9eec9 !important;
     transition: all 0.2s;
 }
 .themes-span{
-    position: absolute;
-    left: 10px;
-    height: 30px;
-    overflow: hidden;
-    width: 150px;
+    // position: absolute;
+    // left: 10px;
+    // height: 30px;
+    // overflow: hidden;
+    // width: 150px;
     font-size: 12px;
+    margin-left: 12px;
 }
 .themes-checkbox{
-    position: absolute;
-    right: 0;
+    // position: absolute;
+    // right: 0;
 }
 
 .themeSelector > ul {
@@ -76,6 +82,22 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+}
+.displayTrigger-wrapper{
+    background-color: rgba(0, 0, 0, 0.055);
+    padding: 10px;
+    flex: 1;
+}
+.displayTrigger-title{
+    text-transform: uppercase;
+    font-weight: 600;
+    border-bottom: 2px solid black;
+    width: 100%;
+}
+.displayTrigger-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 
