--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -2005,6 +2005,7 @@ label {
   .side-scroll .ImagesPreview--imageContainer__empty {
     width: 0px !important;
     height: 100% !important;
+    min-width: 0 !important;
   }
   .info-up {
     opacity: 1;
