--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -20,7 +20,6 @@ ul {
 
 .container {
   position: relative;
-  width: 100vw !important;
   max-width: none !important;
   margin: 0 !important;
   padding: 0 !important;
@@ -249,7 +248,6 @@ textarea {
 }
 
 .FamilyList--detail {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -539,8 +537,8 @@ label {
 
 .tags-li {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 45%;
-          flex: 1 1 45%;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
   height: auto;
 }
 
@@ -1754,11 +1752,11 @@ input::before {
   height: 100%;
   width: 100%;
   border-left: 1px solid black;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .styledCheckbox-container input:checked ~ .styleCheckbox-checkmark {
-  background-color: #b5b5b5;
+  background-color: rgba(0, 0, 0, 0.18);
 }
 
 .styleCheckbox-checkmark:after {
@@ -1796,6 +1794,10 @@ input::before {
 }
 
 @media only screen and (max-width: 720px) {
+  .FamilyList--detail__image {
+    width: 100%;
+    max-width: 400px;
+  }
   body {
     overscroll-behavior: contain;
     overflow: hidden;
@@ -2079,7 +2081,6 @@ input::before {
     display: none;
   }
   .ImagesPreview--imageContainer {
-    width: 50%;
     min-height: 90px;
     -webkit-box-flex: 1;
         -ms-flex: 1 1 50%;
