--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -18,6 +18,7 @@ ul{
     margin: 0; 
     white-space: nowrap;
 }
+
 .container{
     position: relative;
     // width: 100vw !important;
@@ -61,6 +62,23 @@ form{
     font-size: 11px;
     color: rgb(165, 165, 165);
     margin: 0;
+}
+.addNew-container{
+    margin: 2px;
+    border: 2px solid;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding: 12px;
+}
+.addNew-button{
+    margin-top: 20px;
+    width: 100%;
+}
+.addNew-form{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .EditDetail-container{
@@ -237,9 +255,6 @@ h5{
     font-weight: 600 !important;
     font-size: calc(12px + 0.75vw) !important;
     padding-bottom: 5px;
-}
-label{
-    margin: 0 !important;
 }
 .ImageInfo--transferState{
     width: 100%;
