--- a/client/src/css/components/_imageInfo.scss
+++ b/client/src/css/components/_imageInfo.scss
@@ -62,6 +62,11 @@
     justify-content: space-between;
     align-items: center;
     min-height: 19px;
+    label{
+        margin-bottom: 0 !important;
+        margin-right: 10px;
+        white-space: nowrap;
+    }
 }
 .themes-list:hover{
     background-color: #f5fff5;
@@ -79,6 +84,32 @@
     font-size: 12px;
     cursor: pointer;
     white-space: nowrap;
+}
+.themes-list-delete{
+    height: 16px;
+    min-height: 16px;
+    width: 16px;
+    min-width: 16px;
+    border-radius: 10px;
+    margin-right: 10px;
+    opacity: 0;
+    position: relative;
+    cursor: pointer;
+    img{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+    }
+}
+.themes-list:hover .themes-list-delete{
+    // border: 2px solid rgb(238, 185, 185);
+    // cursor: pointer;
+    opacity: 0.4;
+}
+.themes-list-delete:hover{
+    opacity: 1 !important;
+    transform: scale(1.2) !important;
+    // background-color: rgb(255, 105, 105);
 }
 
 .themeSelector > ul {
