--- a/client/src/css/components/_imageInfo.scss
+++ b/client/src/css/components/_imageInfo.scss
@@ -66,6 +66,8 @@
         margin-bottom: 0 !important;
         margin-right: 10px;
         white-space: nowrap;
+        width: 100%;
+        cursor: pointer;
     }
 }
 .themes-list:hover{
