categories add/delete guest actions

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1366,7 +1366,8 @@ h5 {
 }
 
 .ImagesPreview--image {
-  height: 120px;
+  max-height: 120px;
+  max-width: 100%;
 }
 
 .ImagesPreview--imageContainer__empty {
