--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -35,6 +35,9 @@ ul{
     overflow-y: auto;
     width: 100%;
 }
+.yearLocation-wrapper{
+    
+}
 
 h3{
     margin: 0 !important;
@@ -642,7 +645,8 @@ font-family: 'Times New Roman', Times, serif;
     min-width: 90px;
 }
 .ImagesPreview--image{
-    height: 120px;
+    max-height: 120px;
+    max-width: 100%;
 }
 .ImagesPreview--imageContainer__empty{
     // border: 2px solid red;
