--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -532,6 +532,12 @@
   margin: 0;
   padding: 0;
   white-space: normal;
+  color: black;
+}
+
+html, body, #root, .app-container, .admin-container {
+  height: 100%;
+  width: 100%;
 }
 
 body {
@@ -556,10 +562,32 @@ ul {
   overflow-y: auto;
 }
 
-.overflow-yes {
+.app-container {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 4px solid white;
+}
+
+.admin-container {
   overflow-x: hidden;
   overflow-y: auto;
-  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: min-content 1fr;
+      grid-template-rows: -webkit-min-content 1fr;
+      grid-template-rows: min-content 1fr;
+  overflow: hidden;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.yearLocation-label {
+  width: 80px;
 }
 
 h3 {
@@ -603,6 +631,35 @@ form {
   margin: 0;
 }
 
+.tab-pane {
+  padding-top: 15px;
+  height: 100%;
+}
+
+.card-header-tabs {
+  margin-top: 10px;
+}
+
+.nav-link {
+  background-color: #e4e4e4;
+  margin-right: 3px;
+}
+
+.tab-content {
+  border: 1px solid #dee2e6;
+  border-top: 0;
+  border-bottom: 0;
+  padding: 0 10px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .addNew-container {
   margin: 2px;
   border: 2px solid;
@@ -632,6 +689,10 @@ form {
 }
 
 .addNew-form div {
+  width: 100%;
+}
+
+.addNew-input {
   width: 100%;
 }
 
@@ -1020,24 +1081,6 @@ h5 {
 .delete-button:hover {
   background-color: #ff6666 !important;
   opacity: 1 !important;
-}
-
-.app-container {
-  overflow: hidden;
-  height: 100vh;
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  border: 4px solid white;
-}
-
-* {
-  color: black;
 }
 
 .TagsMenu-container {
