--- a/client/src/css/components/_imageInfo.scss
+++ b/client/src/css/components/_imageInfo.scss
@@ -138,8 +138,11 @@
 .displayTrigger-title{
     text-transform: uppercase;
     font-weight: 600;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #737373;
     width: 100%;
+    color: #737373;
+    font-size: 12px;
+
 }
 .displayTrigger-container{
     display: flex;
