--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -215,8 +215,10 @@
 .displayTrigger-title {
   text-transform: uppercase;
   font-weight: 600;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #737373;
   width: 100%;
+  color: #737373;
+  font-size: 12px;
 }
 
 .displayTrigger-container {
@@ -402,7 +404,6 @@
       -ms-flex: 1;
           flex: 1;
   border: 1px solid #e2e2e2;
-  max-width: 300px;
   background-color: #f1f1f1;
   margin: 5px;
 }
@@ -467,8 +468,8 @@
       -ms-flex: 1;
           flex: 1;
   margin: 5px;
+  padding: 10px;
   border: 1px solid black;
-  max-width: 235px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -582,7 +583,6 @@ ul {
   -ms-grid-rows: min-content 1fr;
       grid-template-rows: -webkit-min-content 1fr;
       grid-template-rows: min-content 1fr;
-  overflow: hidden;
   border-bottom: 1px solid #dee2e6;
 }
 
@@ -632,8 +632,7 @@ form {
 }
 
 .tab-pane {
-  padding-top: 15px;
-  height: 100%;
+  padding-top: 3px;
 }
 
 .card-header-tabs {
@@ -643,14 +642,13 @@ form {
 .nav-link {
   background-color: #e4e4e4;
   margin-right: 3px;
+  margin-top: 3px;
 }
 
 .tab-content {
-  border: 1px solid #dee2e6;
   border-top: 0;
   border-bottom: 0;
-  padding: 0 10px;
-  height: 100%;
+  padding: 0 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -709,6 +707,61 @@ form {
           justify-content: space-between;
   border: 1px solid black;
   margin: 2px 1px 0 1px;
+}
+
+.create-createFamily {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.create-createFamily .addNew-container {
+  width: 200px;
+}
+
+.create-createFamily .imageInfo--box {
+  min-width: 200px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.admin-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 4px;
+}
+
+.admin-level {
+  margin-left: 20px;
+  font-weight: bold;
+}
+
+.admin-nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 0 !important;
+}
+
+.admin-nav-list li {
+  margin-left: 3px;
 }
 
 p {
@@ -2403,6 +2456,17 @@ h5 {
 }
 
 @media only screen and (max-width: 720px) {
+  .admin-nav {
+    display: block;
+  }
+  .admin-nav-list li {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .admin-nav-list li button {
+    width: 100%;
+  }
   .FamilyList--detail__image {
     width: 170px;
   }
