--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -61,7 +61,6 @@ ul{
     overflow-y: auto;
     display: grid;
     grid-template-rows: min-content 1fr;
-    overflow: hidden;
     border-bottom: 1px solid #dee2e6;;
 }
 .yearLocation-label{
@@ -96,8 +95,7 @@ form{
 }
 //BOOTSTRAP TABS
 .tab-pane{
-    padding-top: 15px;
-    height: 100%;
+    padding-top: 3px;
 }
 .card-header-tabs{
     margin-top: 10px;
@@ -105,13 +103,12 @@ form{
 .nav-link{
     background-color: rgb(228, 228, 228);
     margin-right: 3px;
+    margin-top: 3px;
 }
 .tab-content{
-    border: 1px solid #dee2e6;
     border-top: 0;
     border-bottom: 0;
-    padding: 0 10px;
-    height: 100%;
+    padding: 0 5px;
     display: flex;
     flex-direction: column;
 }
@@ -147,6 +144,38 @@ form{
     justify-content:space-between;
     border: 1px solid black;
     margin: 2px 1px 0 1px;
+}
+.create-createFamily{
+    display: flex;
+    flex-wrap: wrap;
+    .addNew-container{
+        width: 200px;
+    }
+    .imageInfo--box{
+        min-width: 200px;
+        flex: 1;
+    }
+}
+.admin-nav{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    margin-bottom: 4px;
+}
+.admin-level{
+    margin-left: 20px;
+    font-weight: bold;
+}
+.admin-nav-list{
+    display: flex;
+    list-style:none; 
+    margin:0;
+    flex-wrap: wrap; 
+    justify-content: flex-end;
+    padding: 0 !important;
+    li{
+        margin-left: 3px;
+    }
 }
 
 
@@ -1408,6 +1437,17 @@ font-family: 'Times New Roman', Times, serif;
   }
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
+    .admin-nav{
+        display:block;
+    }
+    .admin-nav-list{
+        li{
+            flex: 1;
+            button{
+                width: 100%;
+            }
+        }
+    }
     .FamilyList--detail__image{
         width: 170px;
     }
